k8s/mariadb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/mysql
            - name: init-sql-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: init-sql-volume
          configMap:
            name: mariadb-init-sql
