k8s/boot-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: boot-ser
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8000
  selector:
    app: boot-kube
