k8s/mariadb-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: default
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP # 외부에서 접근하려면 LoadBalancer 또는 NodePort로 변경
