k8s/redis-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  clusterIP: None  # Headless service, 상태 저장이 필요한 경우 유용, 직접적인 통신을 허용
