k8s/vue-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-ser
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 80
  selector:
    app: vue-kube
